[gd_scene load_steps=5 format=3 uid="uid://cl5187ltkgw2i"]

[ext_resource type="Script" uid="uid://ckjxrktq3e26r" path="res://Scripts/cards/Card.gd" id="1_3p273"]
[ext_resource type="Shader" uid="uid://3aey8gv4qyqd" path="res://Graphics/Shaders/CardOutline.gdshader" id="3_3m7nw"]
[ext_resource type="Texture2D" uid="uid://5k4dx1073wmy" path="res://Graphics/Sprites/HeartStone.aseprite" id="3_h8wm0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h8wm0"]
resource_local_to_scene = true
shader = ExtResource("3_3m7nw")
shader_parameter/outline_color = Color(1, 1, 1, 0)
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_time_scale = 6.1

[node name="Card" type="Node2D" node_paths=PackedStringArray("card_sprite", "control")]
script = ExtResource("1_3p273")
card_sprite = NodePath("Card_control/Card_sprite")
control = NodePath("Card_control")

[node name="Card_control" type="Control" parent="."]
z_index = -13
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.5
offset_top = -77.0
offset_right = 27.5
grow_horizontal = 2
grow_vertical = 0

[node name="Card_sprite" type="TextureRect" parent="Card_control"]
texture_filter = 1
material = SubResource("ShaderMaterial_h8wm0")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_h8wm0")
stretch_mode = 5

[node name="Card_button" type="Button" parent="Card_control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "This is the text that pops up when 
you didn't put a tooltip
"
mouse_default_cursor_shape = 2

[connection signal="button_down" from="Card_control/Card_button" to="." method="_on_card_button_down"]
[connection signal="mouse_entered" from="Card_control/Card_button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Card_control/Card_button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Card_control/Card_button" to="." method="_on_button_pressed"]
